--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Categories/CategoriesCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/Home/Categories/CategoriesCell.xib
@@ -54,11 +54,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="312 Collections" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9k-iy-yKW">
-                                <rect key="frame" x="15" y="107" width="83.666666666666671" height="18"/>
+                                <rect key="frame" x="15" y="107" width="85.666666666666671" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="fJF-ia-DDQ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
