--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/Cart/CartCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/Cart/CartCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +20,7 @@
                         <rect key="frame" x="29" y="12" width="93" height="60"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="cart.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="lsF-0N-3xx">
-                                <rect key="frame" x="32" y="21.666666666666664" width="26" height="26"/>
+                                <rect key="frame" x="33" y="17.666666666666664" width="26" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="1" green="0.40392156862745099" blue="0.070588235294117646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
@@ -44,9 +44,11 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ffq-qe-DhT">
                         <rect key="frame" x="142" y="12" width="204" height="60"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="BUY NOW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxU-RE-OZC">
-                                <rect key="frame" x="64" y="21" width="77" height="18"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BUY NOW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxU-RE-OZC">
+                                <rect key="frame" x="63.666666666666657" y="21" width="77" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="18" id="FIx-tl-u2m"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -55,6 +57,10 @@
                         <color key="backgroundColor" red="0.16862745098039217" green="0.22352941176470587" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="6q8-qy-bbP"/>
+                            <constraint firstAttribute="bottom" secondItem="dxU-RE-OZC" secondAttribute="bottom" constant="21" id="FwF-2h-EmM"/>
+                            <constraint firstItem="dxU-RE-OZC" firstAttribute="leading" secondItem="Ffq-qe-DhT" secondAttribute="leading" constant="63.5" id="Gc3-lu-gAF"/>
+                            <constraint firstAttribute="trailing" secondItem="dxU-RE-OZC" secondAttribute="trailing" constant="63.5" id="Os8-SV-g6H"/>
+                            <constraint firstItem="dxU-RE-OZC" firstAttribute="top" secondItem="Ffq-qe-DhT" secondAttribute="top" constant="21" id="ao5-dc-42D"/>
                             <constraint firstAttribute="width" constant="204" id="hgx-HS-9OQ"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
